--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.29.2",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
